--- a/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Exceptions.resx
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Exceptions.resx
@@ -126,4 +126,7 @@
   <data name="JsonParseFormat" xml:space="preserve">
     <value>Unable to parse JSON document as type '{0}'.</value>
   </data>
+  <data name="UnknownScaleActionFormat" xml:space="preserve">
+    <value>Received unknown scale action '{0}' from performance monitor.</value>
+  </data>
 </root>
