--- a/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Validation.resx
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Validation.resx
@@ -118,19 +118,16 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AadOnlyFieldFormat" xml:space="preserve">
-    <value>{0} should only be specified if using AAD pod identity.</value>
+    <value>{0} should only be specified if using managed identity.</value>
   </data>
   <data name="AadRequiredFieldFormat" xml:space="preserve">
-    <value>{0} must be specified if using AAD pod identity.</value>
+    <value>{0} must be specified if using managed identity.</value>
   </data>
   <data name="BlankConnectionVarFormat" xml:space="preserve">
     <value>Unable to resolve the connection string from environment variable '{0}'.</value>
   </data>
   <data name="InvalidAadFieldFormat" xml:space="preserve">
-    <value>{0} should not be specified if using AAD pod identity.</value>
-  </data>
-  <data name="NegativeValueFormat" xml:space="preserve">
-    <value>{0} cannot be less than 0.</value>
+    <value>{0} should not be specified if using managed identity.</value>
   </data>
   <data name="OptionalBlankValueFormat" xml:space="preserve">
     <value>If specified, {0} cannot be empty or consist entirely of white space characters.</value>
@@ -140,11 +137,5 @@
   </data>
   <data name="UnknownValueFormat" xml:space="preserve">
     <value>Unknown value '{0}' for {1}.</value>
-  </data>
-  <data name="ValueTooBigFormat" xml:space="preserve">
-    <value>{0} cannot be larger than {1}.</value>
-  </data>
-  <data name="ValueTooSmallFormat" xml:space="preserve">
-    <value>{0} must be greater than {1}.</value>
   </data>
 </root>
