Update scaler service

--- a/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Validation.resx
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Validation.resx
@@ -132,6 +132,9 @@
   <data name="OptionalBlankValueFormat" xml:space="preserve">
     <value>If specified, {0} cannot be empty or consist entirely of white space characters.</value>
   </data>
+  <data name="PositiveValueFormat" xml:space="preserve">
+    <value>{0} must be a positive number.</value>
+  </data>
   <data name="RequiredBlankValueFormat" xml:space="preserve">
     <value>{0} is required and cannot be empty or consist entirely of white space characters.</value>
   </data>
