--- a/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Exceptions.resx
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/Resources/Exceptions.resx
@@ -120,6 +120,9 @@
   <data name="InvalidK8sResourceFormat" xml:space="preserve">
     <value>'{0}.{1}/{2}' in namespace '{3}' is invalid: {4}</value>
   </data>
+  <data name="InvalidPartitionCountFormat" xml:space="preserve">
+    <value>Partition count must be greater than 0 but found a count of {0}.</value>
+  </data>
   <data name="JsonParseFormat" xml:space="preserve">
     <value>Unable to parse JSON document as type '{0}'.</value>
   </data>
